test/end-to-end/compile-errors/spec-use-invalid.crow
main void()
	()

nat64[t] builtin t equal

e[t] enum(x) t equal

ex[t] extern t equal

f[t] flags t equal

r[t] record t equal

u[t] union(x) t equal
